--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "morgan": "~1.9.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
