--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.0",
+    "@types/socket.io-client": "^1.4.36",
     "nodemon": "^3.1.9",
+    "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
